hphp/test/slow/experimental_features_config/error_unstable_no_allow.php.expectf
Fatal error: Cannot use unstable feature: `test_feature` in %s on line 5
